# TokenLense

./: .gitignore  README.md  ReadMe.md  docker-compose.yml  inseq_mvp.py  old.ipynb  pyproject.toml  requirements.txt
.cadence/configs/: Old Script.yaml  attribution_benchmark.yaml  inseq_tests.yaml  robust-device-mapping-yeah.yaml
analyzer/: Dockerfile  README.md  api.py  data_loader.py  inseq_processor.py  main.py  models.py  pyproject.toml  requirements.txt
analyzer/Documentation/: get_attribution_endpoint.md  openapi_export_20251104.json
analyzer/routers/: __init__.py  attribution.py  models.py  performance.py
analyzer/tests/: __init__.py  conftest.py  test_api.py  test_data_loader.py  test_inseq_processor.py
core/: attribution_comparison.py  main.ipynb  main.py  model.py
extractor/: ReadMe.md  requirements.txt
extractor/docs/: README.md  custom_dataset_guide.md
extractor/notebooks/analyze/: attribution_method_performance_summary.csv  runtime.ipynb
extractor/notebooks/data/: prompt_aggregated_results.csv  prompt_timing_results.csv
extractor/scripts/: run_boolq_attribution.py  run_facts_attribution.py  run_simple_question_attribution.py
extractor/src/: __init__.py
extractor/src/benchmark/: __init__.py  config.py  (+3 more)
extractor/tests/: __init__.py
llama_token_analyzer/: __init__.py
llama_token_analyzer/core/: analysis.py  model.py  robust-device-mapping.py
llama_token_analyzer/persistence/: schema.py  storage.py
llama_token_analyzer/visualization/: main.py  plots.py
notebooks/: Inseq.ipynb  datasets.ipynb  example.ipynb  plot.ipynb
notebooks/data/: method_timing_results.csv
old/: old.ipynb  old.py
old/notebooks/: test_inseq_data_structure.py
scripts/: run_boolq_attribution.py  run_facts_attribution.py
src/benchmark/: __init__.py  config.py  reporting.py  run_attribution_benchmark.py  schema.py
src/core/: inseq_analysis.py  model.py  robust-device-mapping.py
src/persistence/: inseq_schema.py  storage.py
src/visualization/: main.py  plots.py
tests/inseq/: test_inseq.py  test_inseq_methods.py
ui/: Dockerfile  ReadMe.md  bun.lockb  docker-build-push.sh  index.html  package.json  tailwind.config.mjs  tsconfig.app.json  vite.config.ts
ui/design/: design-system.md  design_mvp.tsx
ui/src/: App.tsx  Layout.tsx  Routes.tsx  compress.ts  index.css  main.tsx
visualizer/: Dockerfile  README.md  bun.lockb  eslint.config.mjs  package-lock.json  package.json
visualizer/app/: globals.css  layout.tsx  page.tsx
visualizer/docs/: api-integration.md  architecture-design.md  compare-page.md  implementation-blueprint.md  implementation-summary.md  main_prompt.md  models-page.md  onboarding-strategy.md  onboarding-user-stories.md  performance-page.md  progress.md  project-understanding.md  token-importance-page.md  token-visualization.md  wordcloud-enhancements.md
visualizer/lib/: api.ts  types.ts  utils.ts
work/notebooks/: plot.ipynb  test_inseq_data_structure.py
(+73 files in other folders)
