[tool.poetry]
name = "llama-token-analyzer"
version = "0.1.0"
description = ""
authors = ["Ruben Kaiser <ruben@kaiser.fyi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = ">=2.0.0"
transformers = "^4.37.0"
pydantic = "^2.6.0"
returns = "^0.22.0"
numpy = "^1.24.0"
seaborn = "^0.13.0"
scikit-learn = "^1.4.0"
toolz = "^0.12.0"
tqdm = "^4.66.0"
ipywidgets = "^8.1.5"
accelerate = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.12.0"
mypy = "^1.8.0"
jupyterlab = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=llama_token_analyzer"