[tool.poetry]
name = "llama-token-analyzer"
version = "0.1.0"
description = ""
authors = ["Ruben Kaiser <ruben@kaiser.fyi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = ">=2.3.1"
transformers = "^4.38.1"
pydantic = "^2.6.0"
returns = "^0.22.0"
numpy = "^1.26.4"
seaborn = "^0.13.0"
scikit-learn = "^1.4.0"
toolz = "^0.12.0"
tqdm = "^4.66.4"
ipywidgets = "^8.1.5"
accelerate = "^1.1.1"
inseq = "^0.6.0"
captum = "^0.7.0"
jaxtyping = "^0.2.25"
matplotlib = "^3.8.2"
rich = "^13.7.0"
protobuf = "^4.25.2"
typeguard = "^2.13.3"
treescope = "0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.12.0"
mypy = "^1.8.0"
jupyterlab = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=llama_token_analyzer"