[tool.poetry]
name = "analyzer"
version = "0.1.0"
description = "Analyzer tool"
authors = ["Ruben Kaiser <ruben.kaiser@tum.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
numpy = "^2.2.4"
pandas = "^2.2.3"
inseq = "^0.6.0"
uvicorn = "^0.34.0"
pytest = "^8.3.5"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"